# Robotic-Kinematics

./: CMakeLists.txt
inc/: globalconstants.h  kinematic.h  mathutils.h
src/: kinematic.c  main.c
